--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <body>
   
-    <div class="brand">Business Casual</div>
+    <div class="brand">Jasmine Wong </div>
     <div class="address-bar">The Plaza | 5483 Start Bootstrap Ave. | Beverly Hills, California 26892 | 555.519.2013</div>
 
     <nav class="navbar navbar-default" role="navigation">
@@ -29,7 +29,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html">Business Casual</a>
+          <a class="navbar-brand" href="index.html">Jasmine Wong</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
