i change the background

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                   <img class="img-responsive img-full" src="http://newevolutiondesigns.com/images/freebies/colorful-background-21.jpg" >
                 </div>
                 <div class="item">
-                  <img class="img-responsive img-full" src="img/slide-2.jpg" >
+                  <img class="img-responsive img-full" src="http://www.freechristmaswallpapers.net/images/wallpapers/xmas-flakes-background-938927.jpeg" >
                 </div>
                 <div class="item">
                   <img class="img-responsive img-full" src="img/slide-3.jpg" >
