i change the name

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <body>
   
-    <div class="brand">Jasmine Wong </div>
+    <div class="brand">Jasmine Wong Home </div>
     <div class="address-bar">The Plaza | 5483 Start Bootstrap Ave. | Beverly Hills, California 26892 | 555.519.2013</div>
 
     <nav class="navbar navbar-default" role="navigation">
@@ -29,7 +29,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html">Jasmine Wong</a>
+          <a class="navbar-brand" href="index.html">Jasmine Wong Home</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -78,7 +78,7 @@
                 <span class="icon-next"></span>
               </a>
             </div>
-            <h1><small>Welcome to</small><br><span class="brand-name">Business Casual</span><hr class="tagline-divider"><small>By <strong>Start Bootstrap</strong></small></h1>
+            <h1><small>Welcome to</small><br><span class="brand-name">Jasmine Wong Home<hr class="tagline-divider"><small>By <strong>Start Bootstrap</strong></small></h1>
           </div>
         </div>
       </div>
