--- a/about.html
+++ b/about.html
@@ -69,16 +69,16 @@
         <div class="box">
           <div class="col-lg-12">
             <hr>
-            <h2 class="intro-text text-center"> <strong>Jasmine Wong</strong></h2>
+            <h2 class="intro-text text-center">our <strong>team</strong></h2>
             <hr>
           </div>
           <div class="col-sm-4 text-center">
               <img class="img-responsive" src="http://placehold.it/750x450">
-              <h3>John Smith <small>Job Title</small></h3>
+              <h3>Jasmine Wong <small>?</small></h3>
           </div>
           <div class="col-sm-4 text-center">
               <img class="img-responsive" src="http://placehold.it/750x450">
-              <h3>John Smith <small>Job Title</small></h3>
+              <h3>John Smith  <small>Job Title</small></h3>
           </div>
           <div class="col-sm-4 text-center">
               <img class="img-responsive" src="http://placehold.it/750x450">
