i change the background

--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@
               <h3>Jasmine Wong <small>?</small></h3>
           </div>
           <div class="col-sm-4 text-center">
-              <img class="img-responsive" src="http://placehold.it/750x450">
+              <img class="img-responsive" src="http://content.internetvideoarchive.com/content/photos/8126/553524_008.jpg">
               <h3>John Smith  <small>Job Title</small></h3>
           </div>
           <div class="col-sm-4 text-center">
