ichange the name

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>About - Business Casual Template for Bootstrap</title>
+    <title>About cartoon</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
