--- a/about.html
+++ b/about.html
@@ -50,7 +50,8 @@
         <div class="box">
           <div class="col-lg-12">
             <hr>
-            <h2 class="intro-text text-center">About <strong>business casual</strong></h2>
+            <h2 class="intro-text text-center">About <strong>cartoon</strong></h2>
+         
             <hr>
           </div>
           <div class="col-md-6">
