--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <span class="icon-next"></span>
               </a>
             </div>
-            <h1><small>Welcome to</small><br><span class="brand-name">Jasmine Wong Home<hr class="tagline-divider"><small>By <strong>Jamsine Wong</strong></small></h1>
+            <h1><small>Welcome to</small><br><span class="brand-name">Jasmine Wong<hr class="tagline-divider"><small>By <strong>Jamsine Wong</strong></small></h1>
           </div>
         </div>
       </div>
