--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
             <hr>
           </div>
           <div class="col-md-6">
-            <img class="http://www.entertainmentwallpaper.com/images/res1920x1080/movie/despicable-me-2-22.jpg">
+            <img class="img-responsive" src="http://http://www.entertainmentwallpaper.com/images/res1920x1080/movie/despicable-me-2-22.jpg''
           </div>
           <div class="col-md-6">
             <p>This is a great place to introduce your company or project and describe what you do.</p>
